--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=5.4",
-        "composer-plugin-api": "^1.0"
+        "composer-plugin-api": "^1.0",
+        "neirda24/tools-bundle": "~1"
     },
     "require-dev": {
         "composer/composer": "~1.0@dev"
